<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- group with single selected item so only one item is highlighted in the nav menu -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/draweritem_home"
            android:title="@string/home" />

        <item
            android:id="@+id/draweritem_about_typ"
            android:title="@string/about_typ" />

        <item
            android:id="@+id/draweritem_typ_committee"
            android:title="@string/typ_committee" />

        <item
            android:id="@+id/draweritem_tn_directory"
            android:title="@string/tn_directory" />

        <item
            android:id="@+id/draweritem_vibhag"
            android:title="@string/vibhag" />

        <item
            android:id="@+id/draweritem_events"
            android:title="@string/events" />

        <item
            android:id="@+id/draweritem_gallery"
            android:title="@string/gallery" />

        <item
            android:id="@+id/draweritem_edownloads"
            android:title="@string/edownloads" />

        <item
            android:id="@+id/draweritem_logout"
            android:title="@string/logout" />

    </group>

</menu>
