<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_ten">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_twenty"
                android:src="@drawable/app_icon" />

            <com.digitfellas.typchennai.common.customtextview.LatoRegularTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                android:text="@string/sign_up_info"
                android:textSize="@dimen/sp_twelve" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_cnf_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_cnf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>

            <com.digitfellas.typchennai.common.customtextview.LatoBoldTextview
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_thirty"
                android:background="@drawable/button_background"
                android:paddingBottom="@dimen/padding_ten"
                android:paddingLeft="@dimen/padding_twenty"
                android:paddingRight="@dimen/padding_twenty"
                android:paddingTop="@dimen/padding_ten"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_fourteen" />

            <com.digitfellas.typchennai.common.customtextview.LatoRegularTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_ten"
                android:text="@string/otp_info"
                android:textSize="@dimen/sp_twelve" />


            <com.digitfellas.typchennai.common.customtextview.LatoBoldTextview
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_signup"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_ten"
                android:layout_marginTop="@dimen/padding_twenty"
                android:visibility="gone"
                android:text="@string/login_l"
                android:textColor="@color/app_title_color"
                android:textSize="@dimen/sp_fourteen" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>