<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_twenty"
            android:src="@drawable/app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_mobile_no"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:maxLines="1"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>


            <com.digitfellas.typchennai.common.customtextview.LatoBoldTextview
                android:id="@+id/tv_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                android:background="@drawable/button_background"
                android:paddingBottom="@dimen/padding_ten"
                android:paddingLeft="@dimen/padding_thirty"
                android:paddingRight="@dimen/padding_thirty"
                android:paddingTop="@dimen/padding_ten"
                android:text="@string/get_otp"
                android:textColor="@color/white" />

            <com.digitfellas.typchennai.common.customtextview.LatoRegularTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty_three"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_ten"
                android:text="@string/otp_info"
                android:textColor="@color/app_description_color"
                android:textSize="@dimen/sp_twelve" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <com.digitfellas.typchennai.common.customtextview.LatoRegularTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty_three"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_ten"
                android:text="@string/enter_pin"
                android:visibility="gone"
                android:textColor="@color/app_description_color"
                android:textSize="@dimen/sp_twelve" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_pin_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>


            <com.digitfellas.typchennai.common.customtextview.LatoRegularTextview
                android:id="@+id/tv_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_pin_layout"
                android:layout_marginTop="@dimen/padding_five"
                android:paddingLeft="@dimen/padding_twenty"
                android:paddingRight="@dimen/padding_twenty"
                android:textColor="@color/red"
                android:textSize="@dimen/padding_thirteen"
                android:visibility="gone" />

            <com.digitfellas.typchennai.common.customtextview.LatoRegularTextview
                android:id="@+id/tv_resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_error_text"
                android:layout_marginLeft="@dimen/padding_five"
                android:layout_marginTop="@dimen/padding_thirty"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/padding_twenty"
                android:paddingRight="@dimen/padding_twenty"
                android:paddingTop="10dp"
                android:text="@string/resend_code"
                android:visibility="gone"
                android:textColor="@color/app_base_color" />

            <com.digitfellas.typchennai.common.customtextview.LatoBoldTextview
                android:id="@+id/tv_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                android:background="@drawable/button_background"
                android:paddingBottom="@dimen/padding_ten"
                android:paddingLeft="@dimen/padding_thirty"
                android:paddingRight="@dimen/padding_thirty"
                android:paddingTop="@dimen/padding_ten"
                android:text="@string/verify"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>