<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_native_loc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/native_loc"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"
                app:theme="@style/EditextTheme">

                <com.digitfellas.typchennai.common.customtextview.LatoRegularEditText
                    android:id="@+id/et_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_fourteen" />

            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"></Spinner>


            <Spinner
                android:id="@+id/sp_marital_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_twenty"
                android:layout_marginRight="@dimen/padding_twenty"
                android:layout_marginTop="@dimen/padding_twenty"></Spinner>

            <com.digitfellas.typchennai.common.customtextview.LatoBoldTextview
                android:id="@+id/tv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/padding_ten"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:padding="@dimen/padding_ten"
                android:text="SEARCH"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_fourteen" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_directory_list_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rg"
            android:layout_below="@+id/tv_advanced_search"
            android:visibility="gone"></android.support.v7.widget.RecyclerView>


    </LinearLayout>


</ScrollView>